2016-08-30 Noam Tal Hod <hod@cern.ch>
	* Added 2HDM setup This is very preliminary and requrires some extra
	non-ATLAS tools/packages to be there on top of AnalysisTop. Please
	consault the README file(s).

2016-08-12 Samuel Calvet <scalvet@cern.ch>
	* Cleaning in MM codes

2016-08-11 Samuel Calvet <scalvet@cern.ch>
	* Add some missing branches to MiniTree

2016-08-09 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* The "0btag" and "1btag" splitting re-implemented in AnaTtresQCD code 

2016-08-05 Samuel Calvet <scalvet@cern.ch>
	* Code ready to run on 2 type of rates (2015/2016)
	* MiniTree has now the isData branch filled
	* Make all the codes use the last verion of the chi2

2016-08-02 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Removed the muon triggers for 2016 version 

2016-07-01 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* separating the 2015 and 2016 analysis types for real and fake rates
	* TopNtupleAnalysis-00-02-16

2016-06-16 Marino Romano <sromanos@cern.ch>
	* Updating the tools for the real and fake estimation. Adding the MWT and MWT parametrisation in different minDR regions
	* Adding new Analysis class for the closure test for different CRs (AnaTtresMM)
	* Adding new real/fake rates for muon channel for W+jets CR (>=3D2 jets; ex-0 bjets and in-1 bjets)
	* Performing the MWT vs MET parametrisation for the muon channel. 
	* Update in the structure to read the rates from the root files (should be easier to add/update the real and fake rates). 
	* Adding weight for sherpa2.2.
	* TopNtupleAnalysis-00-02-15

2016-06-15 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Added the histograms in TopNtupleAnalysis/Root/AnaTtresSL.cxx to
	study the $\chi^2$ parametrization
	* Updated the HistogramService class to add TProfile. 

2016-05-12 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added simple Python code for simpler tests.
	* TopNtupleAnalysis-00-02-14

2016-05-03 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added Top EFT reweighting method.
	* TopNtupleAnalysis-00-02-13